--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                 Hi, my name is <span class="red">Abhishek Malasi</span>
                 <div>and I am a passionate</div>
                 <span id="element"></span>
-                <div><img src="decoration/Deadpool2.png" alt=""></div>
-                <div title="Download my resume from here"><a href="resume/ABHISHEK MALASI Resume.pdf" class="circle-link"></a></div>
+                <div><img src="Deadpool2.png" alt=""></div>
+                <div title="Download my resume from here"><a href="ABHISHEK MALASI Resume.pdf" class="circle-link"></a></div>
             </div>
             <div class="rightSection">
-                <img src="decoration/bg.png" alt="">
+                <img src="bg.png" alt="">
             </div>
         </section>
 
