--- a/projects.html
+++ b/projects.html
@@ -51,12 +51,12 @@
 
         <section class="projectssecondSection">
             <div class=" projectsgallary">
-                <img src="PROJECTS/ATM Picture1.jpg" alt="image" class = "phover-me1 ">
-                <img src="PROJECTS/ATM Picture2.jpg" alt="image" class = "phover-me2 ">
-                <img src="PROJECTS/ATM Picture3.jpg" alt="image" class = "phover-me3 ">
-                <img src="PROJECTS/ATM Picture4.jpg" alt="image" class = "phover-me4 ">
-                <img src="PROJECTS/ATM Picture5.jpeg" alt="image" class = "phover-me5 ">
-                <img src="PROJECTS/ATM Picture6.png" alt="image" class = "phover-me6 ">
+                <img src="ATM Picture1.jpg" alt="image" class = "phover-me1 ">
+                <img src="ATM Picture2.jpg" alt="image" class = "phover-me2 ">
+                <img src="ATM Picture3.jpg" alt="image" class = "phover-me3 ">
+                <img src="ATM Picture4.jpg" alt="image" class = "phover-me4 ">
+                <img src="ATM Picture5.jpeg" alt="image" class = "phover-me5 ">
+                <img src="ATM Picture6.png" alt="image" class = "phover-me6 ">
             </div>
         </section>
 
@@ -83,10 +83,10 @@
 
         <section class="projectfourthSection">
             <div class=" projectsgallaryTR">
-                <img src="PROJECTS/TURTLE RACE/Turtle race 1.jpg" alt="image" class = "phover-TRimg1 ">
-                <img src="PROJECTS/TURTLE RACE/Turtle race 2.jpg" alt="image" class = "phover-TRimg2 ">
-                <video src="PROJECTS/TURTLE RACE/Turtle race 3.MP4" class = "phover-TRvideo3 " autoplay loop muted   ></video>
-                <img src="PROJECTS/TURTLE RACE/Turtle race 4.jpg" alt="image" class = "phover-TRimg4 ">
+                <img src="Turtle race 1.jpg" alt="image" class = "phover-TRimg1 ">
+                <img src="Turtle race 2.jpg" alt="image" class = "phover-TRimg2 ">
+                <video src="Turtle race 3.MP4" class = "phover-TRvideo3 " autoplay loop muted   ></video>
+                <img src="Turtle race 4.jpg" alt="image" class = "phover-TRimg4 ">
             </div>
         </section>
 
