--- a/about.html
+++ b/about.html
@@ -44,11 +44,11 @@
 
         <section class="aboutsecondSection">
             <div class=" gallary">
-                <img src="certificate_pics/AI FOR EVERYONE CERTIFICATION .jpg" alt="image" class="hover-me1">
-                <img src="certificate_pics/CLOUD COMPUTING BASICS-CLOUD 101.jpg" alt="image" class="hover-me2">
-                <img src="certificate_pics/Fundamentals Of Network Communications.jpg" alt="image" class="hover-me3">
-                <img src="certificate_pics/Mathematical Foundations for Cryptography.jpg" alt="image" class="hover-me4">
-                <img src="certificate_pics/Software Engineering.jpg" alt="image" class="hover-me5">
+                <img src="AI FOR EVERYONE CERTIFICATION .jpg" alt="image" class="hover-me1">
+                <img src="CLOUD COMPUTING BASICS-CLOUD 101.jpg" alt="image" class="hover-me2">
+                <img src="Fundamentals Of Network Communications.jpg" alt="image" class="hover-me3">
+                <img src="Mathematical Foundations for Cryptography.jpg" alt="image" class="hover-me4">
+                <img src="Software Engineering.jpg" alt="image" class="hover-me5">
             </div>
         </section>
 
