--- a/skills.html
+++ b/skills.html
@@ -35,17 +35,17 @@
 
         <section class="skillsfirstSection">
             <div class=" skillsgallary">
-                <img src="icons/html-logo3.png" alt="image" class = "skillspositionimg1 ">
-                <img src="icons/css-logo3.png" alt="image" class = "skillspositionimg2 ">
-                <img src="icons/java-logo3.png" alt="image" class = "skillspositionimg3 ">
-                <img src="icons/apache-netbeans3.png" alt="image" class = "skillspositionimg4 ">
-                <img src="icons/android-studio3.png" alt="image" class = "skillspositionimg5 ">
+                <img src="html-logo3.png" alt="image" class = "skillspositionimg1 ">
+                <img src="css-logo3.png" alt="image" class = "skillspositionimg2 ">
+                <img src="java-logo3.png" alt="image" class = "skillspositionimg3 ">
+                <img src="apache-netbeans3.png" alt="image" class = "skillspositionimg4 ">
+                <img src="android-studio3.png" alt="image" class = "skillspositionimg5 ">
             </div>
         </section>
 
         <section class="skillssecondSection">
             <div class=" beyonder">
-              <img src="decoration/beyonder-wallpapers.png" alt="image" class = "beyonderchar" style="height:500px" >
+              <img src="beyonder-wallpapers.png" alt="image" class = "beyonderchar" style="height:500px" >
             </div>
         </section>
 
