--- a/projects.html
+++ b/projects.html
@@ -99,7 +99,7 @@
             </div>
         </section>
 
-      <!--  <section class="projectsixthSection">
+      <section class="projectsixthSection">
             <div class=" projectsgallaryPW">
                 <img src="PROJECTS/Portfolio/p1.png" alt="image" class = "phover-PWimg1 ">
                 <img src="PROJECTS/Portfolio/p2.png" alt="image" class = "phover-PWimg2 ">
@@ -108,7 +108,7 @@
                 <img src="PROJECTS/Portfolio/p5.png" alt="image" class = "phover-PWimg5 ">
                 <img src="PROJECTS/Portfolio/p6.png" alt="image" class = "phover-PWimg6 ">
             </div>
-        </section> ! -->
+        </section> 
 
     </main>
 
